--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -9,9 +9,9 @@
       %th Release Date
       %th More Info
   %tbody
-    - @movies.order('title').each_with_index do |movie, index|
+    - @movies.each_with_index do |movie, index|
       %tr
-        %td= index
+        %td= index+1
         %td= movie.title 
         %td= movie.rating
         %td= movie.release_date
