--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,14 +1,13 @@
 !!! 5
 %html
   %head
+    %title Rotten Potatoes!
     = stylesheet_link_tag 'application'
     = javascript_include_tag 'application'
     = csrf_meta_tags
 
   %body
     #main
-      = link_to movies_path do
-        <div id="app_banner" class="banner">RottenPotatoes!</div>
       - if flash[:notice]
         #notice.message= flash[:notice]
       - elsif flash[:warning]
