--- a/app/views/movies/edit.html.haml
+++ b/app/views/movies/edit.html.haml
@@ -1,14 +1,15 @@
-%h1 Edit Existing Movie
-
+%h2 Edit Movie
 = form_tag movie_path(@movie), :method => :put do
-
   = label :movie, :title, 'Title'
   = text_field :movie, 'title'
-
   = label :movie, :rating, 'Rating'
   = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
 
   = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = date_select :movie, :release_date, :start_year => 1930
 
-  = submit_tag 'Update Movie Info'
+  = label :movie, :description, 'description'
+  = text_field :movie, :description
+
+  = submit_tag 'Save Changes'
+  = link_to "Cancel", :back
