--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -7,21 +7,21 @@
 %table#movies
   %thead
     %tr
+      %th number
       %th Movie Title
       %th Rating
       %th Release Date
       %th More Info
 
   %tbody
-    - @movies.each do |movie|
+    - @movies.order('title').each_with_index do |movie, index|
       %tr
+        %td= index+1
         %td= movie.title 
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
     
-    
-
 = link_to 'Add new movie ', new_movie_path  
 &nbsp;
 = link_to 'Login' , login_path  
