--- a/app/views/movies/new.html.haml
+++ b/app/views/movies/new.html.haml
@@ -1,4 +1,4 @@
-%h2 Create New Movie
+%h1 Create New Movie
 
 = form_tag movies_path, :method => :post do
 
@@ -9,6 +9,10 @@
   = select :movie, :rating, ['G','PG','PG-13','R','NC-17']
  
   = label :movie, :release_date, 'Released On'
-  = date_select :movie, :release_date
+  = date_select :movie, :release_date, :start_year => 1930
+  
+  = label :movie, :description, 'description'
+  = text_field :movie, :description
 
   = submit_tag 'Save Changes'
+  = link_to 'Cancel', movies_path
