--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -2,6 +2,12 @@
 %div
   - if @current_user 
     %h1= current_user.name
+    = link_to 'Log_out' , sign_out_path  
+
+  - else 
+    = link_to 'Login' , login_path  
+
+
 
 
 %table#movies
@@ -21,12 +27,9 @@
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
-    
-= link_to 'Add new movie ', new_movie_path  
-&nbsp;
-= link_to 'Login' , login_path  
-&nbsp;
-= link_to 'Log_out' , sign_out_path 
+
+- if @current_user     
+  = link_to 'Add new movie ', new_movie_path  
 
 
 
